2006-04-17  Paul Eggert  <eggert@cs.ucla.edu>

	* filemode.c: Include "filemode.h" first, to test the interface.
	Assume that filemode.h includes sys/types.h and sys/stat.h.
	(HAVE_ST_DM_MODE): New macro, moved here from ls.c.
	(ftypelet): Reorder to put common cases first, for efficiency.
	Add 'P', 'w'.  Remove 'M', since it's now the caller's responsibility
	to do 'M'.
	(strmode): Renamed from mode_string, and now stores 12 bytes instead
	of 10, for compatibility with FreeBSD.  All callers changed.
	(filemodestring): Now stores 12 bytes instead of 10, and sets file types
	that can't be deduced solely from st_mode.  First arg is now a const
	pointer.
	* filemode.h (HAVE_DECL_STRMODE): Include <string.h> for strmode.
	(strmode): Renamed from mode_string.
	(filemodestring): New decl.
	* stat-macros.h: Don't undef S_ISDOOR, since it's never buggy.
	(S_ISDOOR): Don't bother with S_IFDOOR, since that code is never needed.
	(S_ISPORT, S_ISWHT): New macros, if not already defined.

	* openat.h (openat_needs_fchdir) [ ! defined __OPENAT_PREFIX]:
	Turn this into a macro that always returns false.

2006-04-15  Paul Eggert  <eggert@cs.ucla.edu>

	* utimens.c (futimens): glibc futimesat messes up if /proc
	isn't mounted.  Problem reported by Kir Kolyshkin.

2006-04-14  Jim Meyering  <jim@meyering.net>

	Remove unreachable code and plug leaks in code that handles degenerate
	input and some failure cases.
	* fts.c (fts_build): #if-0-out a block of unused code. Patch from glibc.
	(fts_build): Remove just-#if-0'd code and the code that
	declares and sets cderrno.
	(fts_build): Free `head' before returning NULL, in two places,
	to avoid leaks.  Patch from glibc.
	(fts_open): Don't allocate parent if *argv==NULL.  Patch from glibc.

2006-04-13  Paul Eggert  <eggert@cs.ucla.edu>

	* regcomp.c (init_dfa): Don't use wchar_t or wctype_t if RE_ENABLE_I18N
	is not defined.  Problem reported by Mark D. Baushke via Derek R. Price.